[web] Fix spacing regression in `MessageList` component
Summary:
Context: https://linear.app/comm/issue/ENG-761/spacing-regression-between-conversations-in-messagelist

Previous approach: https://phab.comm.dev/D3537

There was a regression with the `MessageList` component where the spacing between the `conversationHeader` (AKA timestamp) and messages was removed.

Went through the git history of `chat-message-list.css` and checked to see if any commits changed the `div.conversationHeader` CSS selector and found D3067 to be relevant. Specifically, the diff removed the `padding` property (I believe unintentionally).

I reintroduced the `padding` property, but set vertical padding to `6px` instead of `7px` to maintain the relationship with `font-size` (which went from `14px` to `12px`).

Test Plan:
Things look as expected:
Before:
{F132268}

After:
{F132269}

Messed around with the web app and looked around the code and couldn't find any side effects.

Reviewers: abosh, varun, tomek, jacek, ashoat

Reviewed By: abosh, ashoat

Subscribers: adrian

Differential Revision: https://phab.comm.dev/D4777

--- a/web/chat/chat-message-list.css
+++ b/web/chat/chat-message-list.css
@@ -33,6 +33,7 @@ div.loading {
 div.conversationHeader {
   color: var(--chat-timestamp-color);
   font-size: var(--xs-font-12);
+  padding: 6px 0;
   line-height: var(--line-height-text);
   text-align: center;
 }
